[package]
name = "dfiles"
version = "0.1.0"
authors = ["Wayne Warren <wayne.warren.s@gmail.com>"]
edition = "2021"

[workspace]
members = [
  "dfiles-apps/chrome",
  "dfiles-apps/discord",
  "dfiles-apps/drawio",
  "dfiles-apps/firefox",
  "dfiles-apps/signal",
  "dfiles-apps/skype",
  "dfiles-apps/steam",
  "dfiles-apps/thinkorswim",
  "dfiles-apps/zoom",

  "dfiles-core",
]

[[bin]]
name = "dfiles"
path = "src/main.rs"

[dependencies]
