[package]
name = "chrome"
# because google chrome doesn't allow us to install a specific actual version of chrome, we have to
# go with a date-based version string here since the best we can do at image build time is know the
# current datetime
version = "2023.2.17"
authors = ["Wayne Warren <wayne.warren.s@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dfiles-core = { path = "../../dfiles-core" }
anyhow = "1.0"
